--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="col-12 col-lg-6">
                         <p class="paragraph">
-                            I have collaborated with reputable tech companies of which Morrhtech Solutions is one. I am passionate about creating beautiful and efficient websites, guiding clients through the entire process from concept and design to development and launch.</p>
+                            I empower businesses by designing and developing high-performance websites and web applications that are not only visually stunning but also optimized for speed, SEO, and user experience. From concept and UX/UI design to full-stack development and successful launch, I guide clients through every stage to create results-driven digital solutions.</p>
                     </div>
                 </div>
 
@@ -187,7 +187,7 @@
                                     <!-- Icon End -->
                                     <h4>
                                         <a class="d-flex flex-wrap align-items-end justify-content-between fw-bold text-xl font-Syne service-card-link">
-                                            Desktop <br /> applications
+                                            Deployment & <br /> Maintenance
                                         </a>
                                     </h4>
                                 </div>
@@ -221,7 +221,7 @@
                                     <!-- Icon End -->
                                     <h4>
                                         <a class="d-flex flex-wrap align-items-end justify-content-between fw-bold text-xl font-Syne service-card-link">
-                                            Basic  <br /> SEO
+                                            Decent  <br /> SEO
                                         </a>
                                     </h4>
                                 </div>
@@ -375,7 +375,7 @@
                             <ul class="award-lists d-flex flex-wrap p-0 list-unstyled">
                                 <li class="award-lists-item">
 
-                                    <span class="text-dark text-32 fw-bold font-Syne position-relative">08</span>
+                                    <span class="text-dark text-32 fw-bold font-Syne position-relative">02</span>
                                     <p class="paragraph">Award winner</p>
                                 </li>
                                 <li class="award-lists-item">
