--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -10,7 +10,7 @@
                 <div class="header-border-bottom d-flex align-items-center justify-content-between flex-grow-1">
 
 <a href="" class="logo-flex">
-  <img src="assets/images/logo/logo1.png" alt="logo">
+  <img src="../../assets/images/logo/new-logo.png" alt="logo">
 <div>
     <p class="text">Chinemerem</p>
     <span class="official">Official</span>
