--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -52,7 +52,7 @@
             <div>
                 <div class="d-flex flex-wrap justify-content-between align-items-center offcanvas-header">
                     <a href="">
-                        <img src="assets/images/logo/logo1.png" alt="">
+
                     </a>
                     <button id="offcanvas-close" class="offcanvas-close bg-primary border-0" data-bs-dismiss="offcanvas" aria-label="Close">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -176,7 +176,7 @@
                         <div class="d-flex flex-column justify-content-between service-contact-card-footer">
                             <h3 class="text-xl fw-bold font-Syne text-white">Looking for a hectic fullstack web developer?</h3>
                             <div class="d-flex justify-content-between align-items-center">
-                                <p class="text-2xl fw-bold font-Syne leading-none text-warning">Send a message</p>
+                                <p class="text-2xl fw-bold font-Syne leading-none text-warning"><a href="#contact-us">Send a message</a></p>
                                 <a href="#contact-us" class="text-white animate-arrow-up">
                                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M11.6667 28.3334L28.3334 11.6667" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -190,8 +190,8 @@
                         <div class="d-flex flex-column justify-content-between service-contact-card-footer">
                             <h3 class="text-xl fw-bold font-Syne text-white">Want an in-depth discussion about a project?</h3>
                             <div class="d-flex justify-content-between align-items-center">
-                                <p class="text-2xl fw-bold font-Syne leading-none text-warning">Call</p>
-                                <a href="#" class="text-white animate-arrow-up">
+                                <p class="text-2xl fw-bold font-Syne leading-none text-warning"><a href="tel:+2348109192198">Call</a></p>
+                                <a href="tel:+2348167482198" class="text-white animate-arrow-up">
                                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M11.6667 28.3334L28.3334 11.6667" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                         <path d="M11.6667 11.6667H28.3334V28.3334" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
