--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -391,7 +391,7 @@
                             </ul>
 
                             <div class="d-flex flex-wrap">
-                                <a href="../../../assets/cv/chinemerem-resume.pdf" download="chinemerem-resume.pdf" class="d-flex flex-wrap align-items-center btn-primary">Download my resume
+                                <a (click)="downloadResume()" class="btn btn-primary d-flex flex-wrap align-items-center">Download my resume
                                     <span class="d-inline-block animate-arrow-up">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2"
