--- a/src/app/client/projects/projects.component.html
+++ b/src/app/client/projects/projects.component.html
@@ -1,10 +1,10 @@
   <!-- Portfolio Section Start -->
-        <section class="bg-white pt-20 pb-120">
+        <section class="bg-white pt-20 pb-120 section-body">
             <div class="container mx-auto">
                 <div class="row">
                     <div class="col-12" data-aos="flip-down" data-aos-delay="400">
                         <div class="fw-bold font-Syne text-center leading-none d-flex flex-wrap flex-column gap-y-2 mb-10">
-                            <span class="text-warning text-xl">Portfolio</span>
+                            <span class="text-warning text-xl pt-200">Portfolio</span>
                             <h3 class="section-title text-dark">My recent <span
                                     class="position-relative circle-shape portfolio-shape">w</span>ork</h3>
                         </div>
