New-Production-Changes

--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -27,7 +27,7 @@
                             <div class="d-flex flex-wrap hero-btn-wraper">
                                 <!-- Link Start -->
                                 <span data-aos="fade-right" data-aos-delay="1000">
-              <a href="#contact-us" class="d-flex align-items-center flex-wrap btn-primary">Let’s
+              <a href="#contact-me" class="d-flex align-items-center flex-wrap btn-primary">Let’s
                 Talk
                 <span class="animate-arrow-up">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -106,7 +106,7 @@
             </div>
 
             <div class="d-none d-md-block">
-                <img class="position-absolute top-0 end-0 hero-image" data-aos="fade-left" src="../../../assets/images/hero/me.png" alt="hero Image">
+                <img class="position-absolute top-0 end-0 hero-image" data-aos="fade-left" src="../../../assets/images/hero/me.webp" alt="hero Image">
             </div>
            <div id="services"></div>
         </section>
@@ -325,7 +325,7 @@
                     <div class="col-12 col-xl-4" data-aos="zoom-in" data-aos-delay="1000">
                         <div class="bg-dark d-flex flex-wrap flex-column justify-content-between service-contact-card">
                             <div class="d-flex flex-wrap justify-content-end">
-                                <a href="#contact-us" class="animate-arrow-up">
+                                <a href="#contact-me" class="animate-arrow-up">
                                     <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M23.3333 56.6666L56.6667 23.3333" stroke="#FFB646" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round" />
                                         <path d="M23.3333 23.3333H56.6667V56.6666" stroke="#FFB646" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -353,7 +353,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-6">
                         <div class="position-relative">
-                            <img src="../../../assets/images/hero/me.png" alt="" class="about-img">
+                            <img src="../../../assets/images/hero/me.webp" alt="" class="about-img">
                             <div class="d-flex flex-wrap flex-column position-absolute years-of-experience">
                                 <span
                     class="years-experience-of-number text-dark fw-bold font-Syne leading-none d-inline-block position-relative">4+</span>
@@ -667,7 +667,7 @@
                                 <div class="skills-tab-contents">
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/angular1.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/angular1.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">Angular</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(95%)</p>
@@ -675,7 +675,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/details-icon-html.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/details-icon-html.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">HTML</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(98%)</p>
@@ -683,7 +683,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/css.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/css.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">CSS&nbsp;</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(98%)</p>
@@ -691,7 +691,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/nodejs.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/nodejs.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">Node Js</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(80%)</p>
@@ -699,7 +699,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/details-icon-javascript.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/details-icon-javascript.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">Javascripit</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(89%)</p>
@@ -707,7 +707,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/mongo.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/mongo.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">Mongo DB</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(88%)</p>
@@ -715,7 +715,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/details-icon-bootstrap.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/details-icon-bootstrap.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">Bootstrap</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(92%)</p>
@@ -723,7 +723,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/expressjs.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/expressjs.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">Express Js</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(80%)</p>
@@ -731,7 +731,7 @@
                                     </div>
 
                                     <div class="d-flex flex-wrap gap-4 align-items-start skills-tab-item">
-                                        <img class="items-start" src="../../../assets/images/skills/ts.png" alt="icons">
+                                        <img class="items-start" src="../../../assets/images/skills/ts.webp" alt="icons">
                                         <div class="flex flex-wrap gap-1 flex-1 flex-col">
                                             <h4 class="fw-bold font-Syne leading-normal text-xl text-dark">TypeScript</h4>
                                             <p class="text-sm fw-normal font-Inter leading-none text-dark">(82%)</p>
@@ -845,7 +845,7 @@
 
                     <div class="col-12 col-md-6" data-aos="fade-up" data-aos-delay="600">
                         <div class="rounded-20 overflow-hidden mb-6">
-                            <img src="../../../assets/images/projects/realestate-project1.png" alt="project1">
+                            <img src="../../../assets/images/projects/realestate-project1.webp" alt="project1">
                         </div>
                         <div class="d-flex flex-wrap flex-column gap-3">
                             <div class="d-flex flex-wrap gap-2">
@@ -870,7 +870,7 @@
 
                     <div class="col-12 col-md-6" data-aos="fade-up" data-aos-delay="800">
                         <div class="rounded-20 overflow-hidden mb-6">
-                            <img src="../../../assets/images/projects/cyber-project.png" alt="project1">
+                            <img src="../../../assets/images/projects/cyber-project.webp" alt="project1">
                         </div>
                         <div class="d-flex flex-wrap flex-column gap-3">
                             <div class="d-flex flex-wrap gap-2">
@@ -1021,7 +1021,7 @@
 
                 </div>
             </div>
-           <div id="contact-us"></div>
+           <div></div>
         </section>
         <!-- Testimonial section End -->
 
@@ -1039,6 +1039,7 @@
               {{ faq.answer }}
             </div>
           </div>
+          <div id="contact-me"></div>
         </div>
 
 
@@ -1118,10 +1119,6 @@
                                     <small class="text-danger" *ngIf="contactForm.get('email')?.errors?.email">Please enter a valid email.</small>
                                   </div>
                             </div>
-                            <!-- <div class="col-12 col-md-6">
-                                <label class="text-sm fw-normal font-Inter leading-tight mb-3 d-block" for="Phone">Phone</label>
-                                <input id="Phone" class="fw-normal w-full leading-7 contact-form-control " type="text" placeholder="Your number" name="phone">
-                            </div> -->
                             <div class="col-12">
                                 <label class="text-sm fw-normal font-Inter leading-tight mb-3 d-block" for="Subject">Subject*</label>
                                 <input class="fw-normal w-full leading-7 contact-form-control " type="text" placeholder="Your subject*" formControlName="subject" id="csubject" required>
