--- a/src/app/client/removal-company-project-details/removal-company-project-details.component.html
+++ b/src/app/client/removal-company-project-details/removal-company-project-details.component.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="row mb-12">
                     <div class="col-12">
-                        <img class="w-full rounded-20" src="../../../assets/images/projects/removal-company-project.png" alt="banner">
+                        <img class="w-full rounded-20" src="../../../assets/images/projects/removal-company-project.webp" alt="banner">
                     </div>
                 </div>
                <!-- <a href="https://www.movingcheeseremoval.co.uk/" target="_blank" class="view-btn">View Website</a> <br> -->
@@ -76,7 +76,7 @@
                 </div>
                 <div class="row gy-6 mb-12">
                     <div class="col-12 col-sm-12">
-                        <img class="w-100 h-100 rounded-20" src="../../../assets/images/blog-details/removal-snapshot.png" alt="post image">
+                        <img class="w-100 h-100 rounded-20" src="../../../assets/images/blog-details/removal-snapshot.webp" alt="post image">
                     </div>
 
                 </div>
