--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -18,7 +18,7 @@
 </a>
 
                     <!-- Link Start -->
-                    <a href="#contact-us" class="d-flex align-items-center flex-wrap fw-bold text-dark lh-1 contact-link lets-talk"><span class="lets-talk">Let's Talk</span>
+                    <a href="#contact-me" class="d-flex align-items-center flex-wrap fw-bold text-dark lh-1 contact-link lets-talk"><span class="lets-talk">Let's Talk</span>
                         <span class="animate-arrow-up lets-talk">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M7 17L17 7" stroke="currentColor" stroke-opacity="0.9" stroke-width="2" stroke-linecap="round"
@@ -177,8 +177,8 @@
                         <div class="d-flex flex-column justify-content-between service-contact-card-footer">
                             <h3 class="text-xl fw-bold font-Syne text-white">Looking for a hectic fullstack web developer?</h3>
                             <div class="d-flex justify-content-between align-items-center">
-                                <p class="text-2xl fw-bold font-Syne leading-none text-warning"><a href="#contact-us">Send a message</a></p>
-                                <a href="#contact-us" class="text-white animate-arrow-up">
+                                <p class="text-2xl fw-bold font-Syne leading-none text-warning"><a href="#contact-me">Send a message</a></p>
+                                <a href="#contact-me" class="text-white animate-arrow-up">
                                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M11.6667 28.3334L28.3334 11.6667" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                         <path d="M11.6667 11.6667H28.3334V28.3334" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
