--- a/src/app/client/cyber-security-project-details/cyber-security-project-details.component.html
+++ b/src/app/client/cyber-security-project-details/cyber-security-project-details.component.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="row mb-12">
                     <div class="col-12">
-                        <img class="w-full rounded-20" src="../../../assets/images/projects/cyber-project.png" alt="banner">
+                        <img class="w-full rounded-20" src="../../../assets/images/projects/cyber-project.webp" alt="banner">
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="row gy-6 mb-12">
                     <div class="col-12 col-sm-12">
-                        <img class="w-100 h-100 rounded-20" src="../../../assets/images/blog-details/cyber.png" alt="post image">
+                        <img class="w-100 h-100 rounded-20" src="../../../assets/images/blog-details/cyber.webp" alt="post image">
                     </div>
 
                 </div>
