--- a/src/app/client/projects/projects.component.html
+++ b/src/app/client/projects/projects.component.html
@@ -14,7 +14,7 @@
                 <div class="row g-6">
                     <div class="col-12 col-md-6 col-lg-5" data-aos="flip-down" data-aos-delay="600">
                         <div class="overflow-hidden position-relative project-item">
-                            <img class="w-100 h-100" src="../../../assets/images/projects/project11.png" alt="project1">
+                            <img class="w-100 h-100" src="../../../assets/images/projects/project11.webp" alt="project1">
                             <div class="position-absolute project-item-content">
                                 <div class="d-flex flex-wrap alig-items-center justify-content-between project-item-contet-wrap">
                                     <h4 class="fw-bold font-Syne text-center leading-10 project-title">
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-7" data-aos="flip-down" data-aos-delay="800">
                         <div class="overflow-hidden position-relative project-item">
-                            <img class="w-100 h-100" src="../../../assets/images/projects/realestate-project.png" alt="project1">
+                            <img class="w-100 h-100" src="../../../assets/images/projects/realestate-project.webp" alt="project1">
                             <div class="position-absolute project-item-content">
                                 <div class="d-flex flex-wrap alig-items-center justify-content-between project-item-contet-wrap">
                                     <h4 class="fw-bold font-Syne text-center leading-10 project-title">
@@ -109,7 +109,7 @@
                     </div> -->
                     <div class="col-12 col-md-6 col-lg-10" data-aos="flip-down">
                         <div class="overflow-hidden position-relative project-item">
-                            <img class="w-100 h-100" src="../../../assets/images/projects/cyber-project.png" alt="project1">
+                            <img class="w-100 h-100" src="../../../assets/images/projects/cyber-project.webp" alt="project1">
                             <div class="position-absolute project-item-content">
                                 <div class="d-flex flex-wrap alig-items-center justify-content-between project-item-contet-wrap">
                                     <h4 class="fw-bold font-Syne text-center leading-10 project-title">
