New-Production-Changes

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -93,7 +93,7 @@
                             </a>
                         </li>
                         <li class="offcanvas-menu-item" id="offcanvas-close" data-bs-dismiss="offcanvas" aria-label="Close">
-                            <a href="#contact-us" class="text-white text-xl fw-bold font-Syne leading-none d-flex flex-wrap align-items-center justify-content-between offcanvas-menu-link">Contact
+                            <a href="#contact-me" class="text-white text-xl fw-bold font-Syne leading-none d-flex flex-wrap align-items-center justify-content-between offcanvas-menu-link">Contact
                             </a>
                         </li>
 
